# vanttec_sim

./: .gitignore  .gitmodules  README.md  Readme.md  init_workspace.sh  snippets.xacro
GateDetectRoboSub/: LICENSE  README.md
brazo_assembly/: urdf.rviz
brazo_assembly/launch/: gazebo.launch
brazo_assembly/meshes/: base_link.STL
brazo_assembly/scripts/: state_publisher.py
brazo_assembly/urdf/: brazo.xacro  brazo_assembly_V2.csv  realsense_camera.xacro
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/src/: README.md
props_gazebo/: CMakeLists.txt  package.xml
props_gazebo/models/: gman.dae
props_gazebo/urdf/: gman.xacro
props_gazebo/worlds/: props.world
realsense_gazebo_plugin/urdf/: multi_rs200_simulation.xacro
sensor_plugins/: CMakeLists.txt
sensors/realsense_gazebo_plugin/: CMakeLists.txt
sensors/sensor_plugins/: package.xml
shooter_description/: CMakeLists.txt  package.xml
shooter_description/launch/: config.rviz  robots.launch  upload.launch
shooter_description/meshes/: Torpedo_simulacion_rebajado.STL  base_simulacion.STL  base_simulacion_origen_corregido.dae
shooter_description/shooter_gazebo/: ayuda.txt
shooter_description/urdf/: macro_torpedoes.xacro  shooter.xacro  torpedoes.xacro  torpedoes_1.xacro
sim_challenges/: CMakeLists.txt  package.xml
sim_challenges/launch/: Cybernetic_pool.launch
sim_challenges/models/meshes/: Gate.dae  MyOctagon.dae  Myoctagon2.dae  Myoctagon3.dae  bin02.dae  bin_gman_lid_phone.dae  bin_gman_no_lid.dae  binopen.dae  bintapadod.dae  bintapadoi.dae  buoy1.dae  buoy2.dae  mygate1.dae  mygate2.dae  pathmarker.dae  pathmarker1.dae  pathmarker2.dae
sim_challenges/models/meshes/pathmarkers/: pathmarker1.dae  pathmarker2.dae  pathmarker3.dae  pathmarker4.dae  pathmarker5.dae  pathmarker6.dae  pathmarker8.dae  pathmarker9.dae
sim_challenges/urdf/: bin1.xacro  bin2.xacro  buoy.xacro  buoy2.xacro  gate.xacro  octagon.xacro  pathmarker.xacro  pathmarker2.xacro  torpedos1.xacro  torpedos2.xacro
sim_challenges/urdf/pathmarkers/: pathmarker1.xacro  pathmarker10.xacro  pathmarker2.xacro  pathmarker3.xacro  pathmarker4.xacro  pathmarker5.xacro  pathmarker6.xacro  pathmarker7.xacro  pathmarker8.xacro  pathmarker9.xacro
src/vtec_s3_description/: package.xml
uuv_perception/: CMakeLists.txt  README.md
uuv_perception/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
uuv_perception/launch/: uuv_perception.launch
uuv_perception/scripts/: color_srv.py  yolo_zed.py
uuv_perception/src/: gate_detector.cpp
uuv_world/urdf/: bin1.xacro  bin2.xacro  buoy.xacro  buoy2.xacro  gate.xacro  octagon.xacro  torpedos2.xacro
uv_worlds/: CMakeLists.txt  images.rar  package.xml
uv_worlds/launch/: auv_underwater_world.launch  challenges.launch  challenges2022.launch  herkules_ship_wreck.launch  lake.launch  lake_challenges.launch  mapa_2_ch22.launch  mapa_3_ch22.launch  munkholmen.launch  spawn_dock.launch  spawn_mand_nav.launch  spawn_obs_channel.launch  spawn_obs_field.launch  spawn_speed_challenge.launch  task_obstacles.launch  test_spawn_blacka0.launch  test_spawn_bluea2.launch  test_spawn_greena0.launch  test_spawn_greena2.launch  test_spawn_mandpole_green.launch  test_spawn_mandpole_red.launch  test_spawn_obs_pole.launch  test_spawn_reda0.launch  test_spawn_reda2.launch  test_spawn_yellowa0.launch  test_spawn_yellowa2.launch
uv_worlds/meshes/: gman.dae
uv_worlds/urdf/: bin1.xacro  bin2.xacro  black_buoy_a0.urdf  blue_buoy_a2.urdf  bottle.xacro  buoy.xacro  buoy2.xacro  dock.urdf  gate.xacro  gman.xacro  green_buoy_a0.urdf  green_buoy_a2.urdf  mapa1.xacro  obs_pole.urdf  obs_pole_green.urdf  obs_pole_red.urdf  octagon.xacro  red_buoy_a0.urdf  red_buoy_a2.urdf  torpedos1.xacro  torpedos2.xacro  yellow_buoy_a0.urdf  yellow_buoy_a2.urdf
uv_worlds/worlds/: auv_underwater_world.world  empty_underwater.world  herkules_ship_wreck.world  lake.world  lake_challenges.world  munkholmen.world  swarms.world  testyolact.world  underwater_heightmap.world
vehicle_descriptions/: CMakeLists.txt  package.xml
vehicle_descriptions/launch/: arm.launch  peripherals.launch  uuv_sim.launch  vtec_s3.launch  vtec_u3.launch
vehicle_descriptions/lib/mobility/scripts/: remap_thrust_messages.py
vehicle_descriptions/lib/mobility/src/: SixDOFMov.cpp  gazebo_interface.cpp  gazebo_interface_usv.cpp  gazebo_interface_uuv.cpp  uuv_gazebo_interface.cpp
vehicle_descriptions/not_used/brazo_assembly/urdf/: brazo_assembly.urdf
vehicle_descriptions/not_used/shooter_description/: CMakeLists.txt  package.xml
vehicle_descriptions/not_used/shooter_description/launch/: shooter_gazebo.launch
vehicle_descriptions/not_used/shooter_description/meshes/: torpedoes.dae
vehicle_descriptions/robots/: vtec_s3.xacro  vtec_u3.urdf  vtec_u3.xacro
vehicle_descriptions/urdf/USVs/: vtec_s3_base.xacro  vtec_s3_sensors.xacro
vehicle_descriptions/urdf/UUVs/: vtec_u3_arm.xacro  vtec_u3_base.xacro  vtec_u3_sensors.xacro  vtec_u3_shooter.xacro
vehicles_descriptions/: CMakeLists.txt
vehicles_descriptions/launch/: arm_test.launch  vtec_s3.launch  vtec_u3.launch
vehicles_descriptions/meshes/arm/: extendible_arm.stl
vehicles_descriptions/not_used/shooter_description/: CMakeLists.txt
vehicles_descriptions/robots/: vtec_u3.xacro
vehicles_descriptions/urdf/UUVs/: vtec_u3_base.xacro  vtec_u3_sensors.xacro  vtec_u3_shooter.xacro
vision_node/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
vtec_s3_control/: CMakeLists.txt  package.xml
vtec_s3_control/config/: TAM.yaml  thruster_manager.yaml
vtec_s3_control/launch/: start_thruster_manager.launch
vtec_s3_description/: CMakeLists.txt  package.xml
vtec_s3_description/launch/: multi_boats.launch  upload.launch
vtec_s3_description/robots/: vtec_s3_default.xacro
vtec_s3_description/scripts/: control_keyboard.py
vtec_s3_description/urdf/: actuators.xacro  base.xacro  sensors.xacro  snippets.xacro
vtec_u3_control/: CMakeLists.txt  package.xml
vtec_u3_control/config/: TAM.yaml  thruster_manager.yaml
vtec_u3_description/: CMakeLists.txt  package.xml
(+233 files in other folders)
