<?xml version="1.0"?>
<package format="2">
  <name>sim_challenges</name>
  <version>0.6.1</version>
  <description>The sim_challenges package</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <export>
  </export>
</package>
